# HaskellBook

./: .gitignore
Ch16/: ChapterExercises.hs  ChapterExercises.txt  FunctorInstances.hs  HeavyLifting.hs  Sum.hs  ch16.cabal  replaceWithP.hs
Ch17/: ChapterExercises.hs  ChapterExercises.txt  FixerUpper.hs  ListApplicative.hs  Lookups.hs  Validation.hs  ZipListApplicative.hs  ch17.cabal  instances.hs
Ch18/: ChapterExercises.hs  EitherMonad.hs  SoftwareShop.hs  SphericalCow.hs  bind.hs  ch18.cabal
ch10/: DatabaseProcessing.hs  RewritingFunctions.hs  ScansExercises.hs  ScansExercises.txt  UnderstandingFolds.hs  WarmUpReview.hs
ch11/: AsPatterns.hs  BinaryTree.hs  DaPhone.hs  DogTypes.hs  HuttonsRazor.hs  LanguageExercises.hs  LogicGoats.hs  PityTheBool.hs  Programmers.hs  Vehicles.hs  VigenereCipher.hs  records.hs
ch12/: BleatingEither_PersonExample.hs  FinallySomethingOtherThanAList.hs  ItsOnlyNatural.hs  SmallLibraryForEither.hs  SmallLibraryForMaybe.hs  StringProcessing.hs  Unfolds.hs  ValidateTheWord.hs
ch13/: hangmantests.hs  hangmantests.txt  palindrome.hs  person.hs  tests.hs
ch13/ciphers/: ciphers.cabal
ch13/ciphers/exe/: Main.hs
ch13/ciphers/src/: Ceasar.hs  Vigenere.hs
ch13/ciphers/tests/: CipherTest.hs
ch13/hangman/: hangman.cabal  stack.yaml
ch14/: gen.hs
ch14/addition/: Addition.hs  (+1 more)
ch14/chapterexercises/: GenRandomGenerator.hs  chapterexercises.cabal
ch14/chapterexercises/src/: WordNumber.hs
ch14/chapterexercises/tests/: Idempotence.hs  QuickTests.hs  WordNumberTest.hs
ch15/: ChapterExercises.hs  Madness.hs  MaybeAnotherMonoid.hs  MonoidCheck.hs  OptionalMonoid.hs  Possibly.hs  ch15.cabal
ch2/: ChapterExercises.hs  ex2-10.hs  ex2-11.hs
ch20/: ChapterExercises.hs  LibraryFunctions.hs
ch21/: ChapterExercises.hs  ch21.cabal
ch22/: GetDog.hs  ReaderPractice.hs  ReadingComprehension.hs  WarmingUp.hs  warmingup-merijnuitleg.txt
ch23/: ChapterExercises.hs  FizzBuzz.hs  FizzBuzz.txt  RoleYourOwn.hs  State.hs  ch23.cabal
ch24/: learnparsers.cabal  learnparsers.hs
ch3/: BuildingFunctions.hs  ReadingSyntax.hs  ex3_curry.hs  ex3_module.hs
ch4/: ChapterExercises.hs  CorrectingSyntax.hs  MatchTheFunctionToItsType.txt  Programmers.hs  ch4_ex.hs  ch4_ifcool.hs
ch5/: ch5_exercises.hs  ch5_uncurrying.hs
ch6/: ch6.hs  ch6_EqInstances.hs  ch6_days.hs  ch6_wednesdaywins.hs
ch7/: ch7.hs  ch7_NumbersIntoWords.hs  ch7_arith4.hs
ch8/: ch8_NumbersIntoWords.hs
ch9/: Ch9_Chipher.hs  Ch9_StandardFunctions.hs  ch9_DataChar.hs  ch9_MoreBottoms.hs  ch9_PoemLines.hs  ch9_SquareCube.hs  ch9_ThyFearfulSymmetry.hs  ch9_enumFromTo.hs  ch9_filtering.hs  ch9_zipping.hs
(+6 files in other folders)
