name:                ciphers
version:             0.1.0.0
-- synopsis:         
-- description:
homepage:            https://github.com/githubuser/cipher#readme
license:             BSD3
license-file:        LICENSE
author:              Annelies
maintainer:          example@example.com
copyright:           2017 Annelies
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ciphers
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, ciphers
  
library
  hs-source-dirs:      src
  exposed-modules:     Ceasar, Vigenere
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             CipherTest.hs
  build-depends:       base >=4.7 && <5, hspec, QuickCheck, ciphers
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010