name:                chapterexercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chapterexercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chapterexercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  
library
  exposed-modules:     WordNumber
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5, hspec, QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite wordnumbertest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             WordNumberTest.hs
  build-depends:       base >=4.7 && <5, hspec, QuickCheck, WordNumber
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
  
test-suite quickchecks
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             QuickChecks.hs
  build-depends:       base >=4.7 && <5, hspec, QuickCheck, WordNumber
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010